add slug for models and tree view for root page

--- a/app/views/categories/manage.html.erb
+++ b/app/views/categories/manage.html.erb
@@ -1,2 +1,3 @@
+<%= link_to "home", root_path %>
 <%= sortable_tree @categories, :path => 'categories/sortable/base', :type => :sortable, :new_url => new_category_path, :max_levels => 4
 %>
