--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,28 +1,8 @@
 <h1>Listing categories</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @categories.each do |category| %>
-  <tr>
-    <td><%= category.title %></td>
-    <td><%= category.description %></td>
-
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+<% if @categories%>  
+  <%= sortable_tree @categories, :path => 'categories/tree/base', :new_url => new_category_path, :max_levels => 4
+%>
 <% end %>
-</table>
-
-<br />
 
 <%= link_to 'New Category', new_category_path %>
 <%= link_to 'New Product', new_product_path %>
