--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,6 @@
 <h1>Listing categories</h1>
 <% if @categories%>  
-  <%= sortable_tree @categories, :path => 'categories/tree/base', :new_url => new_category_path, :max_levels => 4
-%>
+  <%= sortable_tree @categories, :path => 'categories/tree/base', :new_url => new_category_path, :max_levels => 4 %>
 <% end %>
 
 <%= link_to 'New Category', new_category_path %>
